# NoWreck

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  use.md
docs/: nowreck-rfc-frozen.md  nowreck-v2-final-test-report.md  nowreck-v2-scope.md
nowreck/: __main__.py  cli.py  main.py  picker.py
nowreck/claims/: models.py  parser.py
nowreck/detector/: change_detector.py
nowreck/model/: prompts.py  provider.py
nowreck/reporter/: terminal_reporter.py
nowreck/scanner/: repository_scanner.py  symbol_index.py
nowreck/storage/: config.py
nowreck/verifier/: verifier.py
tests/: test_change_detector.py  test_claims.py  test_cli.py  test_config.py  test_model.py  test_picker.py  test_picker_integration.py  test_scanner.py  test_symbol_index.py  test_terminal_reporter.py  test_validation.py  test_verifier.py
tests/helpers/: pty_helper.py
